# nano-vllm-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  RUST_IMPLEMENTATION_PLAN.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dependency-update.md  feature_request.md
.github/workflows/: branch-protection.yml  ci.yml
docs/use_cases/: README.md  ai_agents.md  fine_tuning.md  multi_agent_systems.md  multimodal_ai.md  rag_system.md  voice_ai.md
examples/: README.md  advanced_demo.rs  basic_demo.rs
src/: config.rs  lib.rs
src/engine/: block_manager.rs  llm_engine.rs  mod.rs  model_runner.rs  sampling_params.rs  scheduler.rs  sequence.rs
src/layers/: activation.rs  attention.rs  embed_head.rs  layernorm.rs  linear.rs  mod.rs  rotary_embedding.rs  sampler.rs
src/models/: mod.rs  qwen3.rs
src/utils/: context.rs  loader.rs  mod.rs
tests/: README.md  test_utils.rs
tests/e2e/: pipeline_test.rs
tests/integration/: engine_test.rs  model_io_test.rs
tests/performance/: load_test.rs
tests/unit/: edge_cases_test.rs  model_test.rs  sampling_test.rs
